--- a/flask-template/Dockerfile
+++ b/flask-template/Dockerfile
@@ -9,5 +9,4 @@ RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 
 COPY . .
-EXPOSE 5000
-CMD [ "python", "app.py" ]
+CMD ["waitress-serve", "--host", "0.0.0.0", "--port", "5000", "app:app"]
