--- a/flask-template/docker-compose.yml
+++ b/flask-template/docker-compose.yml
@@ -6,10 +6,10 @@ services:
     volumes:
       - .:/app
     environment:
-      FLASK_ENV: development
+      FLASK_ENV: production
       PYTHONUNBUFFERED: 1
       FLASK_RUN_HOST: 0.0.0.0   
       FLASK_RUN_PORT: 5000
     env_file:
       - .env
-    command: python app.py
+    command: waitress-serve --host 0.0.0.0 --port 5000 app:app
