--- a/flask-template/docker-compose.yml
+++ b/flask-template/docker-compose.yml
@@ -5,11 +5,11 @@ services:
       - "5000:5000"
     volumes:
       - .:/app
+      - ./chat-docs-432213-1d571c2cb42f.json:/app/chat-docs-432213-1d571c2cb42f.json  
     environment:
       FLASK_ENV: production
       PYTHONUNBUFFERED: 1
-      FLASK_RUN_HOST: 0.0.0.0   
+      FLASK_RUN_HOST: 0.0.0.0
       FLASK_RUN_PORT: 5000
-    env_file:
-      - .env
+      GOOGLE_APPLICATION_CREDENTIALS: "/app/chat-docs-432213-1d571c2cb42f.json" 
     command: waitress-serve --host 0.0.0.0 --port 5000 app:app
