Updated app.py for Render deployment with Google credentials

--- a/flask-template/Dockerfile
+++ b/flask-template/Dockerfile
@@ -1,23 +1,19 @@
-# Use Python 3.11-slim base image
+# Use Python image
 FROM python:3.11-slim
 
-# Set the working directory
+# Set working directory
 WORKDIR /app
 
-# Install dependencies in a single RUN command for efficiency
-RUN apt-get update && apt-get install -y gcc \
-    && rm -rf /var/lib/apt/lists/* \
-    && pip install --upgrade pip
+# Install dependencies
+COPY requirements.txt requirements.txt
+RUN pip install --upgrade pip
+RUN pip install -r requirements.txt
 
-# Copy and install Python dependencies
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
-
-# Copy the rest of the application code
+# Copy the source code
 COPY . .
 
-# Expose port 5000 for the app
-EXPOSE 5000
+# Set environment variable for Google Credentials
+ENV GOOGLE_APPLICATION_CREDENTIALS="/app/chat-docs-credentials.json"
 
-# Use Waitress to serve the Flask app
+# Start the server
 CMD ["waitress-serve", "--host", "0.0.0.0", "--port", "5000", "app:app"]
