replaced waitress with uvicorn

--- a/flask-template/Dockerfile
+++ b/flask-template/Dockerfile
@@ -1,21 +1,24 @@
-# Use Python image
+# Use official Python image
 FROM python:3.11-slim
 
-# Set working directory
+# Set the working directory
 WORKDIR /app
 
-# Install dependencies
-COPY requirements.txt requirements.txt
+# Install system dependencies
+RUN apt-get update && apt-get install -y \
+    gcc \
+    && rm -rf /var/lib/apt/lists/*
+
+# Install Python dependencies
+COPY requirements.txt .
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 
-# Copy the source code
+# Copy the app code
 COPY . .
 
-# Set environment variable for Google Credentials
-ENV GOOGLE_APPLICATION_CREDENTIALS="/app/chat-docs-credentials.json"
+# Expose the port Flask will run on
+EXPOSE 5000
 
-# Start the server
-CMD ["gunicorn", "wsgi:app", "--bind", "0.0.0.0:5000", "--workers", "3", "--access-logfile", "-"]
-
-
+# Run the Gunicorn server with WSGI
+CMD ["uvicorn", "app:asgi_app", "--host", "0.0.0.0", "--port", "5000"]
