--- a/flask-template/docker-compose.yml
+++ b/flask-template/docker-compose.yml
@@ -11,5 +11,6 @@ services:
       PYTHONUNBUFFERED: 1
       FLASK_RUN_HOST: 0.0.0.0
       FLASK_RUN_PORT: 5000
-      GOOGLE_APPLICATION_CREDENTIALS: "/app/chat-docs-432213-1d571c2cb42f.json" 
-    command: waitress-serve --host 0.0.0.0 --port 5000 app:app
+      GOOGLE_APPLICATION_CREDENTIALS: "/app/chat-docs-432213-1d571c2cb42f.json"
+    command: >
+      uvicorn app:asgi_app --host 0.0.0.0 --port 5000
